force-app/main/default/objects/Contact/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Helps to get count</description>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>