force-app/main/default/objects/Contact/fields/Email_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Name__c</fullName>
    <businessOwnerUser>news@cybertech.com.qaenv</businessOwnerUser>
    <formula>Account.Name</formula>
    <label>Email Account Name</label>
    <type>Text</type>
</CustomField>