force-app/main/default/objects/Contact/fields/Left_Company__c.field-meta.xml
<CustomField>
    <fullName>Left_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To mark if contact has left the Account organization</description>
    <inlineHelpText>Check the box if contact has left the account organization</inlineHelpText>
    <label>Left Company</label>
    <type>Checkbox</type>
</CustomField>