force-app/main/default/objects/Contact/listViews/Active_Clients_2020.listView-meta.xml
<ListView>
    <fullName>Active_Clients_2020</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Esri,Harman,Sumitomo,SBCUSD,PHOENIX,KMG,Waterone,AECOM,ZORA,Aquarion,SAP,Middlesex County,NC4,Modesto,Maverick,Optum,Washoe,Birmingham,Ogden,sparks,reno</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Chesapeake,Moreno</value>
    </filters>
    <label>Active_Clients_2020</label>
</ListView>