force-app/main/default/objects/Contact/listViews/GeoShield_Chief_s.listView-meta.xml
<ListView>
    <fullName>GeoShield_Chief_s</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Police,Sheriff,Crime,Intelligence,PD</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>Cass County Sheriff&apos;s Office</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>Ogden UT Police Department</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Van Buren,Pokagon,Idaho,Sparks,Berrien,Washoe</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>Police Chief,Chief,Director,Chief of Police,Director of Public Safety</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <label>GeoShield Chief&apos;s</label>
</ListView>