force-app/main/default/objects/Contact/listViews/GS_IACA_Sr_Crime_Analyst.listView-meta.xml
<ListView>
    <fullName>GS_IACA_Sr_Crime_Analyst</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>Sr. Crime &amp; Intelligence Analyst,Crime Analysis Supervisor</value>
    </filters>
    <label>GS IACA - List 2</label>
</ListView>