force-app/main/default/objects/Contact/listViews/GS_IACA_Test_list.listView-meta.xml
<ListView>
    <fullName>GS_IACA_Test_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>Crime Analyst,Sr. Crime Analyst,Crime &amp; Intelligence Analyst</value>
    </filters>
    <label>GS IACA - List 1</label>
</ListView>